--- a/conf/local.conf
+++ b/conf/local.conf
@@ -1,28 +1,29 @@
 [[local|localrc]]
-HOST_IP=_IP_ADDRESS_
+HOST_IP=__IP_ADDRESS__
 
 # Interface connected to switch
-FLAT_INTERFACE=eth1
+FLAT_INTERFACE=eth0
 
 # Logging settings
 LOGDAYS=1
+VERBOSE=True
 LOGFILE=$DEST/logs/stack.sh.log
 SCREEN_LOGDIR=$DEST/logs/screen
+LOG_COLOR=True
 
 # Passwords and token
-ADMIN_PASSWORD=_PASSWORD_
-DATABASE_PASSWORD=_PASSWORD_
-RABBIT_PASSWORD=_PASSWORD_
-SERVICE_PASSWORD=_PASSWORD_
+ADMIN_PASSWORD=__PASSWORD__
+DATABASE_PASSWORD=__PASSWORD__
+RABBIT_PASSWORD=__PASSWORD__
+SERVICE_PASSWORD=__PASSWORD__
 SERVICE_TOKEN=a682f596-76f3-11e3-b3b2-e716f9080d50
 
-# Clean up on every restart
+# Reclone each time
 RECLONE=yes
 
 # Fixed and floating subnets
-FIXED_RANGE=10.254.1.0/24
-NETWORK_GATEWAY=10.254.1.1
-
+# FIXED_RANGE=10.254.1.0/24
+# NETWORK_GATEWAY=10.254.1.1
 
 # Disable Nova Networking and enable Neutron
 disable_service n-net
@@ -31,18 +32,94 @@ enable_service q-agt
 enable_service q-dhcp
 enable_service q-l3
 enable_service q-meta
+enable_service q-metering
 enable_service neutron
 
-# Turn on ML2
-Q_PLUGIN=ml2
+# Glance - Image Service
+enable_service g-api
+enable_service g-reg
 
-# Allow tenants to create vlans?
+# Swift - Object Storage
+enable_service s-proxy
+enable_service s-object
+enable_service s-container
+enable_service s-account
+
+## Neutron - Load Balancing
+enable_service q-lbaas
+
+## Neutron - VPN as a Service
+enable_service q-vpn
+
+## Neutron - Firewall as a Service
+enable_service q-fwaas
+
+# VLAN configuration
+Q_PLUGIN=ml2
 ENABLE_TENANT_VLANS=True
-TENANT_VLAN_RANGE=1100:2999
+
+# GRE tunnel configuration
+Q_PLUGIN=ml2
+ENABLE_TENANT_TUNNELS=True
+
+# VXLAN tunnel configuration
+Q_PLUGIN=ml2
+Q_ML2_TENANT_NETWORK_TYPE=vxlan
+
+Q_AGENT=openvswitch
 
 # these are needed fo VLANs for tenants to connect to physical switch
-PHYSICAL_NETWORK=default
-OVS_PHYSICAL_BRIDGE=br-eth1
+# PHYSICAL_NETWORK=default
+# OVS_PHYSICAL_BRIDGE=br-eth0
+
 # I think this will load the arista ML2 driver
 # Q_ML2_PLUGIN_MECHANISM_DRIVERS = openvswitch,linuxbridge,arista
 
+# Heat - Orchestration Service
+enable_service heat
+enable_service h-api
+enable_service h-api-cfn
+enable_service h-api-cw
+enable_service h-eng
+
+# Ceilometer - Metering Service (metering + alarming)
+enable_service ceilometer-acompute
+enable_service ceilometer-acentral
+enable_service ceilometer-collector
+enable_service ceilometer-api
+enable_service ceilometer-alarm-notify
+enable_service ceilometer-alarm-eval
+
+# Apache fronted for WSGI
+APACHE_ENABLED_SERVICES+=keystone,swift
+
+## For Keystone
+## KEYSTONE_TOKEN_FORMAT=PKI
+
+## For Swift
+SWIFT_REPLICAS=1
+SWIFT_HASH=011688b44136573e209e
+
+# Pre-requisite
+## ENABLED_SERVICES=rabbit,mysql,key
+
+# Horizon (Dashboard UI) - (always use the trunk)
+## ENABLED_SERVICES+=,horizon
+## HORIZON_REPO=https://github.com/openstack/horizon
+## HORIZON_BRANCH=master
+
+# Nova - Compute Service
+## ENABLED_SERVICES+=,n-api,n-crt,n-obj,n-cpu,n-cond,n-sch
+## IMAGE_URLS+=",https://launchpad.net/cirros/trunk/0.3.0/+download/cirros-0.3.0-x86_64-disk.img"
+
+# Nova Network - If you don't want to use Neutron and need a simple network setup (old good stuff!)
+## ENABLED_SERVICES+=,n-net
+
+## Nova Cells
+## ENABLED_SERVICES+=,n-cell
+
+# Cinder - Block Device Service
+## ENABLED_SERVICES+=,cinder,c-api,c-vol,c-sch,c-bak
+
+# Heat - Orchestration Service
+## IMAGE_URLS+=",http://fedorapeople.org/groups/heat/prebuilt-jeos-images/F17-x86_64-cfntools.qcow2"
